--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,69 @@
 body{
     font-family: 'Kanit', sans-serif;
 }
-header{
+.banner-container{
     height: 100vh;
-    background-image: url(../);
+    background-image: url(../images/banner/banner1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.banner-section{
+    text-align: right;
+    font-size: 35px;
+    display: flex;
+    width: 525px;
+    flex-direction: column;
+    flex-shrink: 0;
+    text-align: right;
+    margin-right: 240px;
+    margin-left: auto;
+}
+.banner-title{
+    padding: 180px 0px 0px 0px;
+}
+.banner-description{
+    color:#444343;
+    margin-top: 15px;
+    margin-bottom: 30px;
+}
+.banner-button{
+    color: #FFF;
+    font-size: medium;
+    width: 160px;
+    height: 64px;
+    margin-left: auto;
+    border: none;
+    border-radius: 5px;
+    background: #F15B22;
+    font-family: 'Kanit', sans-serif;
+}
+.section-container{
+    height: 200vh;
+}
+.detail-section{
+    color:#151414;
+    text-align: left;
+    font-size: larger;
+    margin-left: 870px;
+    margin-top: 370px;
+    margin-right: 450px;
+    margin-bottom: 15px;
+}
+.section-of-description{
+    font-size: 16px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+.section-of-list{
+    list-style: none;
+    
+}
+.section-of-image{
+    border-radius: 50%;
+    background: rgba(241, 91, 34, 0.20);
+    display: block;
+    top: 100px;
+    position: relative;
+    float: left;
+
 }
